# gsoc-sample-crankshaft-tui

./: Cargo.toml  readme.md
examples/: demo.rs
src/: app.rs  lib.rs  main.rs
src/event/: handler.rs  mod.rs
src/monitor/: backend.rs  mod.rs  task.rs
src/state/: backend.rs  mod.rs  resource.rs  task.rs
src/ui/: backend_view.rs  dashboard.rs  help.rs  log_view.rs  mod.rs  task_detail.rs  task_list.rs  theme.rs
src/ui/widgets/: mod.rs  progress.rs  sparkline.rs  stat_panel.rs  tabbed_view.rs
